# Discord-Bot

./: .gitignore  Dockerfile  Dockerfile.bak  LICENSE  PKG-INFO  README.md  db.py  docker-compose.yml  main.py  pickup_lines.json  pyproject.toml  requirements.txt  yo_mama_jokes.json
.github/workflows/: deploy.yml
requirements/: all.txt
